--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <header>
     <h1>Mod</h1>
     <nav>
-      <button>Biography</button>
-      <button>Designers</button>
-      <button>Testimonials</button>
-      <button>Strong points</button>
-      <button><img src="img/icon-message.svg" alt="Message icon">Message</button>
+      <a href="#biography">Biography</a>
+      <a href="#designers">Designers</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#strong-points">Strong points</a>
+      <a href="#contacts"><img src="img/icon-message.svg" alt="Message icon">Message</a>
     </nav>
   </header>
   <article>
@@ -23,20 +23,20 @@
     <h2>Mod Studio</h2>
     <h3>Modern Web Studio</h3>
   </article>
-  <section>
+  <section id="biography">
     <h3>Biography</h3>
     <h2>Katya<br>Mills</h2>
     Art Director<br>
     Scenography / Styling / Creative Photography / Design
     <hr>
 
-    <i>“The more I deal with the work<br>as something that is my own,<br>as something that is personal,<br>the more
-      successful it is.”</i>
+    <q>The more I deal with the work<br>as something that is my own,<br>as something that is personal,<br>the more
+      successful it is.</q>
   </section>
-  <aside>
-    <img src="img/jared-weiss.jpg" alt="Jared Weiss">
-  </aside>
   <section>
+    <img src="img/jared-weiss.jpg" alt="Jared Weiss">
+  </section>
+  <section id="designers">
     <header>
       <h2>Designers</h2>
     </header>
@@ -44,52 +44,52 @@
       <img src="img/jess-wonder.jpg" alt="Jess Wonder">
       <figcaption>
         <h3>JESS WONDER</h3>
-        <strong>From/</strong> Be more flower
+        <span>From/</span> Be more flower
         <br>
-        <strong>Skills/</strong> Design Strategy / Marketing
+        <span>Skills/</span> Design Strategy / Marketing
       </figcaption>
     </figure>
     <figure>
       <img src="img/kameron-clein.jpg" alt="Kameron Clein">
       <figcaption>
         <h3>KAMERON CLEIN</h3>
-        <strong>From/</strong> Be more flower
+        <span>From/</span> Be more flower
         <br>
-        <strong>Skills/</strong> Design Strategy / Marketing
+        <span>Skills/</span> Design Strategy / Marketing
       </figcaption>
     </figure>
     <figure>
       <img src="img/louisse-red.jpg" alt="Louisse Red">
       <figcaption>
         <h3>LOUISSE RED</h3>
-        <strong>From/</strong> Be more flower
+        <span>From/</span> Be more flower
         <br>
-        <strong>Skills/</strong> Design Strategy / Marketing
+        <span>Skills/</span> Design Strategy / Marketing
       </figcaption>
     </figure>
     <figure>
       <img src="img/kameron-clein.jpg" alt="Kameron Clein">
       <figcaption>
         <h3>KAMERON CLEIN</h3>
-        <strong>From/</strong> Be more flower
+        <span>From/</span> Be more flower
         <br>
-        <strong>Skills/</strong> Design Strategy / Marketing
+        <span>Skills/</span> Design Strategy / Marketing
       </figcaption>
     </figure>
   </section>
-  <aside>
-    <strong>Creativity</strong> www.whitepapers.com
-    <strong>Creativity</strong> www.whitepapers.com
-    <strong>Website</strong> www.whitepapers.com
-    <img src="img/keghan-crossland.jpg" alt="coffeeshop">
-  </aside>
   <section>
+    <a href="www.whitepapers.com"><span>Creativity</span> www.whitepapers.com</a>
+    <a href="www.whitepapers.com"><span>Creativity</span> www.whitepapers.com</a>
+    <a href="www.whitepapers.com"><span>Website</span> www.whitepapers.com</a>
+    <img src="img/keghan-crossland.jpg" alt="coffeeshop">
+  </section>
+  <section id="testimonials">
     <h2>Testimonials</h2>
-    I just really<br>want to do<br>good work<br>and work with<br>some great<br>people, people<br>who
-    challenge<br>me.
+    <q>I just really<br>want to do<br>good work<br>and work with<br>some great<br>people, people<br>who
+      challenge<br>me.</q>
     <img src="img/sinitta-leunen.jpg" alt="bag">
   </section>
-  <section>
+  <section id="strong-points">
     <header>
       <h2>Strong points</h2>
     </header>
@@ -101,20 +101,31 @@
     </article>
     <article>
       <h2>Strengths</h2>
-      Interiors<br>Outdoors<br>Portraits<br>Styling<br>Events<br>Architecture<br>Design<br>Celebrations<br>Fashion<br>Nature
+      <ul>
+        <li>Interiors</li>
+        <li>Outdoors</li>
+        <li>Portraits</li>
+        <li>Styling</li>
+        <li>Events</li>
+        <li>Architecture</li>
+        <li>Design</li>
+        <li>Celebrations</li>
+        <li>Fashion</li>
+        <li>Nature</li>
+      </ul>
     </article>
     <article>
       <img src="img/keghan-crossland.jpg" alt="coffeeshop">
     </article>
   </section>
   <footer>
-    <div class="contacts">
+    <div id="contacts" class="contacts">
       <a href="tel:+79211234567">+7 921 123-45-67</a>
       <br>
       <a href="mailto:info@modstudio.com">info@modstudio.com</a>
     </div>
     <div class="slogan">
-      A product of <strong>MOD</strong>
+      A product of <span>MOD</span>
     </div>
     <div class="copiright">
       © 2023 Mod Media. All rights reserved
