--- a/index.html
+++ b/index.html
@@ -25,18 +25,17 @@
     <h3 class="hero-section__subtitle">Modern Web Studio</h3>
   </article>
   <section id="biography" class="biography">
+    <img src="img/jared-weiss.jpg" class="biography__image" alt="Jared Weiss">
     <h3 class="biography__header">Biography</h3>
-    <h2 class="biography__subject">Katya<br>Mills</h2>
-    Art Director<br>
-    Scenography / Styling / Creative Photography / Design
-    <hr>
-
-    <q class="biography__quote">The more I deal with the work<br>as something that is my own,<br>as something that is
-      personal,<br>the more
-      successful it is.</q>
-  </section>
-  <section>
-    <img src="img/jared-weiss.jpg" alt="Jared Weiss">
+    <section class="biography__info">
+      <h2 class="biography__subject">Katya<br>Mills</h2>
+      Art Director<br>
+      Scenography / Styling / Creative Photography / Design
+      <hr class="biography__decoration">
+      <q class="biography__quote">The more I deal with the work<br>as something that is my own,<br>as something that is
+        personal,<br>the more
+        successful it is.</q>
+    </section>
   </section>
   <section id="designers" class="designers">
     <header>
