--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3 class="hero-section__subtitle">Modern Web Studio</h3>
     </div>
   </article>
-  <section id="biography" class="biography">
+  <section id="biography" class="biography container">
     <img src="img/jared-weiss.jpg" class="biography__image" alt="Jared Weiss">
     <h3 class="biography__header">Biography</h3>
     <section class="biography__info">
