--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
       </figcaption>
     </figure>
   </section>
-  <section id="testimonials"></section>
-  <section>
-    <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
-      www.whitepapers.com</a>
-    <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
-      www.whitepapers.com</a>
-    <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Website</span>
-      www.whitepapers.com</a>
-    <img src="img/keghan-crossland.jpg" alt="coffeeshop">
-  </section>
-  <h2 class="testimonials__header">Testimonials</h2>
-  <q class="testimonials__quote">I just really<br>want to do<br>good work<br>and work with<br>some great<br>people,
-    people<br>who
-    challenge<br>me.</q>
-  <img src="img/sinitta-leunen.jpg" alt="bag">
+  <section id="testimonials" class="testimonials container">
+    <div class="testimonials__links-container">
+      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Website</span>
+        <br>www.whitepapers.com</a>
+      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
+        <br>www.whitepapers.com</a>
+      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
+        <br>www.whitepapers.com</a>
+    </div>
+    <img src="img/keghan-crossland.jpg" class="testimonials__image" alt="coffeeshop">
+    <h2 class="testimonials__header">Testimonials</h2>
+    <q class="testimonials__quote">I just really<br>want to do<br>good work<br>and work with<br>some great<br>people,
+      people<br>who
+      challenge<br>me.</q>
+    <img src="img/sinitta-leunen.jpg" class="testimonials__customer-image" alt="bag">
   </section>
   <section id="strong-points" class="strong-points">
     <header>
