--- a/index.html
+++ b/index.html
@@ -41,44 +41,47 @@
   </section>
   <section id="designers" class="designers">
     <header>
-      <h2 class="designers__header">Designers</h2>
+      <h2 class="designers__header container">Designers</h2>
     </header>
-    <figure>
-      <img src="img/jess-wonder.jpg" alt="Jess Wonder">
-      <figcaption class="designers__text">
-        <h3 class="designers__subheader">JESS WONDER</h3>
-        <span class="designers__accent">From/</span> Be more flower
-        <br>
-        <span class="designers__accent">Skills/</span> Design Strategy / Marketing
-      </figcaption>
-    </figure>
-    <figure>
-      <img src="img/kameron-clein.jpg" alt="Kameron Clein">
-      <figcaption class="designers__text">
-        <h3 class="designers__subheader">KAMERON CLEIN</h3>
-        <span class="designers__accent">From/</span> Be more flower
-        <br>
-        <span class="designers__accent">Skills/</span> Design Strategy / Marketing
-      </figcaption>
-    </figure>
-    <figure>
-      <img src="img/louisse-red.jpg" alt="Louisse Red">
-      <figcaption class="designers__text">
-        <h3 class="designers__subheader">LOUISSE RED</h3>
-        <span class="designers__accent">From/</span> Be more flower
-        <br>
-        <span class="designers__accent">Skills/</span> Design Strategy / Marketing
-      </figcaption>
-    </figure>
-    <figure>
-      <img src="img/kameron-clein.jpg" alt="Kameron Clein">
-      <figcaption class="designers__text">
-        <h3 class="designers__subheader">KAMERON CLEIN</h3>
-        <span class="designers__accent">From/</span> Be more flower
-        <br>
-        <span class="designers__accent">Skills/</span> Design Strategy / Marketing
-      </figcaption>
-    </figure>
+    <div class="designers__container">
+
+      <figure class="designers__card">
+        <img src="img/jess-wonder.jpg" class="designers__image" alt="Jess Wonder">
+        <figcaption class="designers__text designers__big-image">
+          <h3 class="designers__subheader">JESS WONDER</h3>
+          <span class="designers__accent">From/</span> Be more flower
+          <br>
+          <span class="designers__accent">Skills/</span> Design Strategy / Marketing
+        </figcaption>
+      </figure>
+      <figure class="designers__card">
+        <img src="img/kameron-clein.jpg" class="designers__image" alt="Kameron Clein">
+        <figcaption class="designers__text">
+          <h3 class="designers__subheader">KAMERON CLEIN</h3>
+          <span class="designers__accent">From/</span> Be more flower
+          <br>
+          <span class="designers__accent">Skills/</span> Design Strategy / Marketing
+        </figcaption>
+      </figure>
+      <figure class="designers__card">
+        <img src="img/louisse-red.jpg" class="designers__image" alt="Louisse Red">
+        <figcaption class="designers__text">
+          <h3 class="designers__subheader">LOUISSE RED</h3>
+          <span class="designers__accent">From/</span> Be more flower
+          <br>
+          <span class="designers__accent">Skills/</span> Design Strategy / Marketing
+        </figcaption>
+      </figure>
+      <figure class="designers__card">
+        <img src="img/kameron-clein.jpg" class="designers__image" alt="Kameron Clein">
+        <figcaption class="designers__text">
+          <h3 class="designers__subheader">KAMERON CLEIN</h3>
+          <span class="designers__accent">From/</span> Be more flower
+          <br>
+          <span class="designers__accent">Skills/</span> Design Strategy / Marketing
+        </figcaption>
+      </figure>
+    </div>
   </section>
   <section id="testimonials" class="testimonials container">
     <div class="testimonials__links-container">
