make strong_points

--- a/index.html
+++ b/index.html
@@ -101,37 +101,38 @@
   </section>
   <section id="strong-points" class="strong-points">
     <header>
-      <h2 class="strong-points__header">Strong points</h2>
+      <h2 class="strong-points__header container">Strong points</h2>
     </header>
-    <article>
-      <img src="img/dawid-liberadzki.jpg" alt="Laptop">
-    </article>
-    <article>
-      <img src="img/avery-klein.jpg" alt="Chair">
-    </article>
-    <article>
-      <h2 class="strong-points__subheader">Strengths</h2>
-      <ul class="strong-points__list">
-        <li>Interiors</li>
-        <li>Outdoors</li>
-        <li>Portraits</li>
-        <li>Styling</li>
-        <li>Events</li>
-        <li>Architecture</li>
-        <li>Design</li>
-        <li>Celebrations</li>
-        <li>Fashion</li>
-        <li>Nature</li>
-      </ul>
-    </article>
-    <article>
-      <img src="img/keghan-crossland.jpg" alt="coffeeshop">
-    </article>
+    <div class="strong-points__container">
+      <article class="strong-points__article">
+        <img src="img/dawid-liberadzki.jpg" alt="Laptop">
+      </article>
+      <article class="strong-points__article">
+        <img src="img/avery-klein.jpg" alt="Chair">
+      </article>
+      <article class="strong-points__article  strong-points__article_wide">
+        <h2 class="strong-points__subheader">Strengths</h2>
+        <ul class="strong-points__list">
+          <li>Interiors</li>
+          <li>Outdoors</li>
+          <li>Portraits</li>
+          <li>Styling</li>
+          <li>Events</li>
+          <li>Architecture</li>
+          <li>Design</li>
+          <li>Celebrations</li>
+          <li>Fashion</li>
+          <li>Nature</li>
+        </ul>
+      </article>
+      <article class="strong-points__article">
+        <img src="img/keghan-crossland-small.jpg" alt="coffeeshop">
+      </article>
+    </div>
   </section>
   <footer class="footer">
-    <div id="contacts">
+    <div id="contacts" class="footer__contacts_container">
       <a href="tel:+79211234567" class="footer__contacts">+7 921 123-45-67</a>
-      <br>
       <a href="mailto:info@modstudio.com" class="footer__contacts">info@modstudio.com</a>
     </div>
     <div class="footer__slogan">
