--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     <img src="img/jared-weiss.jpg" class="biography__image" alt="Jared Weiss">
     <h3 class="biography__header">Biography</h3>
     <h2 class="biography__subject">
-      <div class="biography__subject_decoration">-</div>Katya Mills
+      <div class="biography__dash">-</div>Katya Mills
     </h2>
     <div class=" biography__info">
       Art Director
       <ul class="biography__list">
         <li>Scenography</li>
         <li>
-          <div class="biography__leaves_decoration">/ </div>Styling
+          <div class="biography__bullet">/ </div>Styling
         </li>
         <li>
-          <div class="biography__leaves_decoration">/ </div>Creative Photography
+          <div class="biography__bullet">/ </div>Creative Photography
         </li>
         <li>
-          <div class="biography__leaves_decoration">/ </div>Design
+          <div class="biography__bullet">/ </div>Design
         </li>
       </ul>
     </div>
@@ -112,7 +112,7 @@
     <h2 class="testimonials__header">Testimonials</h2>
     <q class="testimonials__quote">I just really want to do good work and work with some great people, people who
       challenge me.</q>
-    <picture class = "testimonials__customer-image_container">
+    <picture class="testimonials__miniature">
       <source srcset="img/sinitta-leunen-mobile.jpg" media="(max-width: 767px)">
       <img src="img/sinitta-leunen.jpg" class="testimonials__customer-image" alt="bag">
     </picture>
@@ -153,7 +153,7 @@
     </div>
   </section>
   <footer class="footer">
-    <div id="contacts" class="footer__contacts_container">
+    <div id="contacts" class="footer__container">
       <a href="tel:+79211234567" class="footer__contacts">+7 921 123-45-67</a>
       <a href="mailto:info@modstudio.com" class="footer__contacts">info@modstudio.com</a>
     </div>
