--- a/index.html
+++ b/index.html
@@ -165,21 +165,21 @@
     </div>
   </footer>
   <div class="modal hidden" id="modal">
-    <div class="callback">
+    <form class="callback" method="get" id="get-in-touch">
       <h2 class="callback__header">Get in touch</h2>
       <p class="callback__text">Do you have any questions? Have something to say?
         Don't be shy, write to us:</p>
-      <h3 class="callback__label">Name</h3>
-      <input type="text" name="callback__name">
-      <h3 class="callback__label">E-mail</h3>
-      <input type="email" name="callback__email">
-      <h3 class="callback__label">E-mail</h3>
-      <textarea type="text" name="callback_text"></textarea>
+      <label for="callback__name" class="callback__label">Name</label>
+      <input type="text" class="callback__name" id="callback__name" name="name" required>
+      <label for="callback__email" class="callback__label">E-mail</label>
+      <input type="email" class="callback__email" id="callback__email" name="email" required>
+      <label for="callback_text" class="callback__label">E-mail</label>
+      <textarea class="callback__text" id="callback__text" name="text"></textarea>
       <div class="callback__buttons-container">
-        <button class="callback__reject" id="reject">Cancel</button>
-        <button class="callback__accept" id="sendInfo">Send</button>
+        <button class="callback__reject" id="reject" type="reset">Cancel</button>
+        <button class="callback__accept" id="sendInfo" type="submit">Send</button>
       </div>
-    </div>
+    </form>
   </div>
   <script src="script/script.js"></script>
 </body>
