--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html">
 
 <head>
   <meta charset="UTF-8">
@@ -13,11 +13,16 @@
   <header class="header">
     <h1 class="header__title">Mod</h1>
     <nav class="header__navigation">
-      <a href="#biography" class="header__ref">B<div class="header__hide">iography</div></a>
-      <a href="#designers" class="header__ref">D<div class="header__hide">esigners</div></a>
-      <a href="#testimonials" class="header__ref">T<div class="header__hide">estimonials</div></a>
-      <a href="#strong-points" class="header__ref">S<div class="header__hide">trong points</div></a>
-      <a class="header__message" id="contactButton"><img src="img/icon-message.svg" alt="Message icon"></a>
+      <a href="#biography" class="header__ref colored-link">B<div class="header__hide">iography</div></a>
+      <a href="#designers" class="header__ref colored-link">D<div class="header__hide">esigners</div></a>
+      <a href="#testimonials" class="header__ref colored-link">T<div class="header__hide">estimonials</div></a>
+      <a href="#strong-points" class="header__ref colored-link">S<div class="header__hide">trong points</div></a>
+      <a class="header__message" id="contactButton">
+        <svg width="50" height="51" viewBox="0 0 50 51" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M30.4111 10.5C35.7826 10.5 40.0801 14.9444 40.0801 20.5V24.9443C40.0801 30.4999 35.7826 34.9443 30.4111 34.9443H25.3623C20.4207 34.9444 15.5862 36.833 11.8262 40.2773C11.6113 40.3885 11.2891 40.5 11.0742 40.5C10.9668 40.5 10.7519 40.4998 10.6445 40.3887C10.2149 40.1665 10 39.8331 10 39.3887V20.5C10 15.1182 14.0326 10.7788 19.168 10.5127L19.6689 10.5H30.4111ZM19.6689 12C15.1731 12 11.5 15.7248 11.5 20.5V38.5684C15.425 35.2585 20.3351 33.4444 25.3623 33.4443H30.4111C34.9069 33.4443 38.5801 29.7195 38.5801 24.9443V20.5C38.5801 15.7248 34.9069 12 30.4111 12H19.6689ZM21.0293 21.0879C21.7603 21.0879 22.3525 21.6811 22.3525 22.4121C22.3524 23.1429 21.7601 23.7354 21.0293 23.7354C20.2985 23.7353 19.7062 23.1429 19.7061 22.4121C19.7061 21.6812 20.2984 21.088 21.0293 21.0879ZM25.4414 21.0879C26.1723 21.088 26.7646 21.6812 26.7646 22.4121C26.7645 23.1428 26.1721 23.7352 25.4414 23.7354C24.7106 23.7354 24.1174 23.1429 24.1172 22.4121C24.1172 21.6811 24.7104 21.0879 25.4414 21.0879ZM29.8525 21.0879C30.5835 21.0879 31.1768 21.6811 31.1768 22.4121C31.1766 23.1429 30.5834 23.7354 29.8525 23.7354C29.1219 23.7351 28.5295 23.1428 28.5293 22.4121C28.5293 21.6813 29.1218 21.0881 29.8525 21.0879Z" />
+        </svg>
+      </a>
     </nav>
   </header>
   <article class="hero-section">
@@ -102,11 +107,14 @@
   </section>
   <section id="testimonials" class="testimonials container">
     <div class="testimonials__links-container">
-      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Website</span>
+      <a href="www.whitepapers.com" class="testimonials__links colored-link"><span
+          class="testimonials__accent">Website</span>
         <br>www.whitepapers.com</a>
-      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
+      <a href="www.whitepapers.com" class="testimonials__links colored-link"><span
+          class="testimonials__accent">Creativity</span>
         <br>www.whitepapers.com</a>
-      <a href="www.whitepapers.com" class="testimonials__links"><span class="testimonials__accent">Creativity</span>
+      <a href="www.whitepapers.com" class="testimonials__links colored-link"><span
+          class="testimonials__accent">Creativity</span>
         <br>www.whitepapers.com</a>
     </div>
     <img src="img/keghan-crossland.jpg" class="testimonials__image" alt="coffeeshop">
@@ -165,7 +173,8 @@
       © 2023 Mod Media. All rights reserved
     </div>
   </footer>
-  <div class="modal hidden" id="modal">
+  </div>
+  <div class="modal" visible="hidden" id="modal">
     <form class="callback" method="get" id="get-in-touch">
       <h2 class="callback__header">Get in touch</h2>
       <p class="callback__question">Do you have any questions? Have something to say?
@@ -189,9 +198,9 @@
             d="M15.876 3.76074C12.6437 3.76074 9.54371 5.04478 7.25811 7.33038C4.97251 9.61598 3.68848 12.7159 3.68848 15.9482C3.68848 19.1806 4.97251 22.2805 7.25811 24.5661C9.54371 26.8517 12.6437 28.1357 15.876 28.1357C18.3967 28.1357 21.0439 27.3764 22.9576 26.1049C23.0602 26.0367 23.1483 25.949 23.217 25.8468C23.2857 25.7445 23.3335 25.6298 23.3579 25.509C23.3822 25.3883 23.3825 25.264 23.3587 25.1431C23.335 25.0223 23.2877 24.9073 23.2195 24.8047C23.1514 24.7021 23.0636 24.614 22.9614 24.5453C22.8592 24.4766 22.7444 24.4288 22.6237 24.4045C22.5029 24.3801 22.3786 24.3798 22.2577 24.4036C22.1369 24.4273 22.0219 24.4746 21.9193 24.5428C20.3291 25.6021 18.01 26.2607 15.876 26.2607C13.8364 26.2607 11.8425 25.6559 10.1467 24.5228C8.45078 23.3896 7.129 21.779 6.34847 19.8947C5.56794 18.0103 5.36372 15.9368 5.76163 13.9364C6.15954 11.9359 7.14171 10.0984 8.58394 8.6562C10.0262 7.21397 11.8637 6.2318 13.8641 5.83389C15.8645 5.43598 17.938 5.64021 19.8224 6.42073C21.7068 7.20126 23.3174 8.52304 24.4505 10.2189C25.5837 11.9148 26.1885 13.9086 26.1885 15.9482C26.1885 19.0479 24.9135 19.6982 23.8447 19.6982C22.776 19.6982 21.501 19.0479 21.501 15.9482V11.2607C21.501 11.0121 21.4022 10.7736 21.2264 10.5978C21.0506 10.422 20.8121 10.3232 20.5635 10.3232C20.3148 10.3232 20.0764 10.422 19.9006 10.5978C19.7247 10.7736 19.626 11.0121 19.626 11.2607V11.76C18.7847 11.0057 17.7357 10.5222 16.6157 10.3726C15.4957 10.223 14.3566 10.4142 13.3468 10.9213C12.337 11.4283 11.5033 12.2277 10.9544 13.2154C10.4054 14.203 10.1667 15.3331 10.2692 16.4584C10.3717 17.5837 10.8107 18.652 11.5291 19.5242C12.2474 20.3964 13.2118 21.032 14.2966 21.3483C15.3814 21.6646 16.5363 21.6468 17.6108 21.2973C18.6854 20.9478 19.6297 20.2828 20.3209 19.3889C21.024 20.7951 22.2369 21.5732 23.8447 21.5732C26.4861 21.5732 28.0635 19.4709 28.0635 15.9482C28.0601 12.717 26.7749 9.61901 24.4901 7.33415C22.2052 5.04929 19.1073 3.76415 15.876 3.76074ZM15.876 19.6982C15.1343 19.6982 14.4093 19.4783 13.7926 19.0663C13.1759 18.6542 12.6953 18.0685 12.4114 17.3833C12.1276 16.6981 12.0533 15.9441 12.198 15.2167C12.3427 14.4892 12.6999 13.821 13.2243 13.2966C13.7488 12.7721 14.417 12.415 15.1444 12.2703C15.8718 12.1256 16.6258 12.1999 17.311 12.4837C17.9963 12.7675 18.5819 13.2482 18.994 13.8649C19.406 14.4815 19.626 15.2066 19.626 15.9482C19.626 16.9428 19.2309 17.8966 18.5276 18.5999C17.8244 19.3032 16.8705 19.6982 15.876 19.6982Z" />
         </svg>
       </div>
-      <label for="callback_text" class="callback__label">E-mail</label>
+      <label for="callback_text" class="callback__label">Comment</label>
       <div class="callback__input-container">
-        <textarea class="callback__text" id="callback__text" name="text" placeholder="name@email.com"></textarea>
+        <textarea class="callback__text" id="callback__text" name="text" placeholder="Some text..."></textarea>
         <svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M18.6338 0.273438C23.0365 0.50155 26.4941 4.22194 26.4941 8.83594V12.6465L26.4834 13.0898C26.2702 17.4967 22.8946 20.9882 18.6338 21.209L18.2051 21.2197H13.876L13.4785 21.2246C9.38067 21.3225 5.39328 22.9313 2.27051 25.792C2.0863 25.8872 1.81012 25.9824 1.62598 25.9824C1.53389 25.9824 1.34993 25.9827 1.25781 25.8877C0.9356 25.7211 0.754273 25.4813 0.713867 25.1689L0.705078 25.0303V8.83594C0.705126 4.07308 4.38912 0.262798 8.99414 0.262695H18.2051L18.6338 0.273438ZM8.99414 2.2627C5.55667 2.2628 2.70513 5.1136 2.70508 8.83594V22.8633C5.97798 20.5024 9.88345 19.2197 13.876 19.2197H18.2051C21.6424 19.2195 24.4941 16.3687 24.4941 12.6465V8.83594C24.4941 5.1137 21.6424 2.26296 18.2051 2.2627H8.99414ZM9.15918 9.21387C9.98298 9.21392 10.6503 9.88128 10.6504 10.7051C10.6504 11.5289 9.98303 12.1972 9.15918 12.1973C8.33528 12.1973 7.66699 11.529 7.66699 10.7051C7.66707 9.88124 8.33533 9.21387 9.15918 9.21387ZM14.1309 9.21387C14.9547 9.21387 15.623 9.88124 15.623 10.7051C15.623 11.529 14.9548 12.1973 14.1309 12.1973C13.3071 12.1971 12.6396 11.5289 12.6396 10.7051C12.6397 9.88135 13.3071 9.21404 14.1309 9.21387ZM19.1045 9.21387C19.9283 9.21396 20.5956 9.8813 20.5957 10.7051C20.5957 11.5289 19.9283 12.1972 19.1045 12.1973C18.2806 12.1973 17.6123 11.529 17.6123 10.7051C17.6124 9.88124 18.2806 9.21387 19.1045 9.21387Z" />
