--- a/index.html
+++ b/index.html
@@ -31,29 +31,19 @@
       <h2 class="hero-section__title">Mod Studio</h2>
       <h3 class="hero-section__subtitle">Modern Web Studio</h3>
     </div>
-  </article>
+  </article> 
   <section id="biography" class="biography container">
     <img src="img/jared-weiss.jpg" class="biography__image" alt="Jared Weiss">
-    <h3 class="biography__header">Biography</h3>
-    <h2 class="biography__subject">
-      <span class="biography__dash">-</span>Katya Mills
-    </h2>
-    <div class=" biography__info">
-      Art Director
+    <h2 class="biography__header">Biography</h2>
+    <h3 class="biography__subject">Katya Mills</h3>
+    <div class="biography__info">Art Director
       <ul class="biography__list">
         <li>Scenography</li>
-        <li>
-          <div class="biography__bullet">/ </div>Styling
-        </li>
-        <li>
-          <div class="biography__bullet">/ </div>Creative Photography
-        </li>
-        <li>
-          <div class="biography__bullet">/ </div>Design
-        </li>
+        <li>Styling</li>
+        <li>Creative Photography</li>
+        <li>Design</li>
       </ul>
     </div>
-    <hr class="biography__decoration">
     <q class="biography__quote">The more I deal with <br class="biography__new-line">the work as something that is my
       own, <br class="biography__new-line">as something
       that <br class="biography__new-line">is
