--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Mod Studio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -31,7 +31,7 @@
       <h2 class="hero-section__title">Mod Studio</h2>
       <h3 class="hero-section__subtitle">Modern Web Studio</h3>
     </div>
-  </article> 
+  </article>
   <section id="biography" class="biography container">
     <img src="img/jared-weiss.jpg" class="biography__image" alt="Jared Weiss">
     <h2 class="biography__header">Biography</h2>
